--- a/[Patient-Level] (2) EyeGaze_MIMIC_import copy.ipynb
+++ b/[Patient-Level] (2) EyeGaze_MIMIC_import copy.ipynb
@@ -34,7 +34,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We have 642 in the EyeGaze dataset can be used with clinical data.\n"
+      "We have 883 in the EyeGaze dataset can be used with clinical data.\n"
      ]
     }
    ],
@@ -43,6 +43,10 @@
     "    os.path.join(EYEGAZE_FOLDER_PATH, \"bounding_boxes.csv\"))\n",
     "eye_gaze_fixation_df = pd.read_csv(\n",
     "    os.path.join(EYEGAZE_FOLDER_PATH, \"fixations.csv\"))\n",
+    "\n",
+    "eye_gaze_gaze_df = pd.read_csv(\n",
+    "    os.path.join(EYEGAZE_FOLDER_PATH, \"eye_gaze.csv\")\n",
+    ")\n",
     "\n",
     "eye_gaze_master_df = pd.read_csv(os.path.join(\n",
     "    EYEGAZE_FOLDER_PATH, \"master_sheet.csv\"))\n",
@@ -309,7 +313,12 @@
     "eye_gaze_fixation_df.to_csv(os.path.join(\n",
     "    XAMI_SPREADSHEET_FOLDER_PATH, \"EyeGaze\", 'fixations.csv'))\n",
     "eye_gaze_master_df.to_csv(os.path.join(\n",
-    "    XAMI_SPREADSHEET_FOLDER_PATH, \"EyeGaze\", 'master_sheet_with_updated_stayId.csv'))"
+    "    XAMI_SPREADSHEET_FOLDER_PATH, \"EyeGaze\", 'master_sheet_with_updated_stayId.csv'))\n",
+    "\n",
+    "eye_gaze_fixation_df.to_csv(\n",
+    "    os.path.join(\n",
+    "    XAMI_SPREADSHEET_FOLDER_PATH, \"EyeGaze\", 'eye_gaze.csv')\n",
+    ")"
    ]
   },
   {
@@ -329,7 +338,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d0a57763d49498a99e0a1507c2594ab",
+       "model_id": "8f1dcaf8e32d4c9699ae7b84de6b460f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -353,6 +362,7 @@
     "        all_dicom_ids_for_subject)]\n",
     "    match_fixation_df = eye_gaze_fixation_df[eye_gaze_fixation_df['DICOM_ID'].isin(\n",
     "        all_dicom_ids_for_subject)]\n",
+    "    match_gaze_df = eye_gaze_gaze_df[eye_gaze_gaze_df['DICOM_ID'].isin(all_dicom_ids_for_subject)]\n",
     "\n",
     "    save_folder_path = os.path.join(\n",
     "        XAMI_MIMIC_PATH, f\"patient_{subject_id}\", \"EyeGaze\")\n",
@@ -363,6 +373,7 @@
     "    match_bounding_box_df.to_csv(os.path.join(\n",
     "        save_folder_path, \"bounding_boxes.csv\"))\n",
     "    match_fixation_df.to_csv(os.path.join(save_folder_path, \"fixations.csv\"))\n",
+    "    match_gaze_df.to_csv(os.path.join(save_folder_path, \"eye_gaze.csv\"))\n",
     "\n",
     "    for dicom_id in all_dicom_ids_for_subject:\n",
     "        source_path = os.path.join(\n",
@@ -383,7 +394,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('pygaze')",
+   "display_name": "pytorch",
    "language": "python",
    "name": "python3"
   },
@@ -397,12 +408,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "82864942334f93613dfea19f40259b2142cb12b26c1510468752ebf43f0344f6"
+    "hash": "05ebdd47fe7a4051acc4227c2d648dd2aae7424f451cfb0e2d4bf70d17920b33"
    }
   }
  },
