--- a/[Patient-Level] (3) REFLACX_MIMIC_import copy.ipynb
+++ b/[Patient-Level] (3) REFLACX_MIMIC_import copy.ipynb
@@ -216,7 +216,7 @@
     "reflacx_meta_df = pd.concat([pd.read_csv(os.path.join(\n",
     "    REFLACX_FOLDER_PATH, \"main_data\", f\"metadata_phase_{i}.csv\")) for i in range(1, 4)])\n",
     "os.makedirs(os.path.join(\n",
-    "    XAMI_SPREADSHEET_FOLDER_PATH, \"REFLACX\"))\n",
+    "    XAMI_SPREADSHEET_FOLDER_PATH, \"REFLACX\"), exist_ok=True)\n",
     "reflacx_meta_df.to_csv(os.path.join(\n",
     "    XAMI_SPREADSHEET_FOLDER_PATH, \"REFLACX\", \"metadata.csv\"))\n"
    ]
@@ -256,7 +256,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e4095cd15104d3789bf54f0181776e6",
+       "model_id": "21be16478ffc4c0e97c451d7013891fc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -275,17 +275,27 @@
     "    all_dicom_ids = list(match_meta_df['dicom_id'])\n",
     "\n",
     "    save_folder_path = os.path.join(XAMI_MIMIC_PATH, f\"patient_{subject_id}\", \"REFLACX\")\n",
+    "\n",
+    "    # create folders\n",
     "    os.makedirs(save_folder_path, exist_ok=True)\n",
+    "    os.makedirs(os.path.join(save_folder_path, \"main_data\"), exist_ok=True)\n",
+    "    os.makedirs(os.path.join(save_folder_path, \"gaze_data\"), exist_ok=True)\n",
     "\n",
     "    match_meta_df.to_csv(os.path.join(save_folder_path, \"metadata.csv\"))\n",
     "\n",
     "    all_study_ids = list(match_meta_df['id'])\n",
     "    \n",
     "    for study_id in all_study_ids:\n",
-    "            source_path = os.path.join(\n",
+    "            main_source_path = os.path.join(\n",
     "                REFLACX_FOLDER_PATH, \"main_data\", study_id)\n",
-    "            destination_path = os.path.join(save_folder_path, study_id)\n",
-    "            copytree(source_path, destination_path, dirs_exist_ok=True, copy_function=copy)"
+    "            main_destination_path = os.path.join(save_folder_path, \"main_data\",study_id)\n",
+    "            copytree(main_source_path, main_destination_path, dirs_exist_ok=True, copy_function=copy)\n",
+    "\n",
+    "            # also do this for gaze data\n",
+    "            gaze_source_path = os.path.join(\n",
+    "                REFLACX_FOLDER_PATH, \"gaze_data\", study_id)\n",
+    "            gaze_destination_path = os.path.join(save_folder_path, \"gaze_data\",study_id)\n",
+    "            copytree(gaze_source_path, gaze_destination_path, dirs_exist_ok=True, copy_function=copy)"
    ]
   },
   {
@@ -307,7 +317,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('pygaze')",
+   "display_name": "pytorch",
    "language": "python",
    "name": "python3"
   },
@@ -321,12 +331,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "82864942334f93613dfea19f40259b2142cb12b26c1510468752ebf43f0344f6"
+    "hash": "05ebdd47fe7a4051acc4227c2d648dd2aae7424f451cfb0e2d4bf70d17920b33"
    }
   }
  },
