--- a/[Patient-Level] (4) Import _CXR_images copy.ipynb
+++ b/[Patient-Level] (4) Import _CXR_images copy.ipynb
@@ -4,20 +4,33 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'os' has no attribute 'paht'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtqdm\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mnotebook\u001b[39;00m  \u001b[39mimport\u001b[39;00m tqdm\n\u001b[1;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mshutil\u001b[39;00m \u001b[39mimport\u001b[39;00m copytree, copy\n\u001b[0;32m----> 5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdata_path\u001b[39;00m \u001b[39mimport\u001b[39;00m CXR_REPORT_FOLDER_PATH, XAMI_SPREADSHEET_FOLDER_PATH, XAMI_MIMIC_PATH, CXR_DICOM_FOLDER_PATH, CXR_JPG_FOLDER_PATH\n\u001b[1;32m      7\u001b[0m pd\u001b[39m.\u001b[39moptions\u001b[39m.\u001b[39mmode\u001b[39m.\u001b[39mchained_assignment  \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/GitHub/MIMIC-Eye/data_path.py:21\u001b[0m\n\u001b[1;32m     19\u001b[0m EYEGAZE_FOLDER_PATH \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(PHYSIONET_PATH, \u001b[39m\"\u001b[39m\u001b[39megd-cxr/1.0.0/\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     20\u001b[0m REFLACX_FOLDER_PATH \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(PHYSIONET_PATH, \u001b[39m\"\u001b[39m\u001b[39mreflacx-xray-localization/1.0.0/\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 21\u001b[0m CXR_REPORT_FOLDER_PATH \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39;49mpaht\u001b[39m.\u001b[39mjoin(PHYSIONET_PATH, \u001b[39m\"\u001b[39m\u001b[39mmimic-cxr-reports/\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     23\u001b[0m \u001b[39m# Store place.\u001b[39;00m\n\u001b[1;32m     25\u001b[0m XAMI_MIMIC_PATH \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m./mimic-eye\u001b[39m\u001b[39m\"\u001b[39m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'os' has no attribute 'paht'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "from tqdm.notebook  import tqdm\n",
     "from shutil import copytree, copy\n",
-    "from data_path import CXR_FOLDER_PATH, XAMI_SPREADSHEET_FOLDER_PATH, XAMI_MIMIC_PATH, CXR_DICOM_FOLDER_PATH\n",
+    "from data_path import CXR_REPORT_FOLDER_PATH, XAMI_SPREADSHEET_FOLDER_PATH, XAMI_MIMIC_PATH, CXR_DICOM_FOLDER_PATH, CXR_JPG_FOLDER_PATH\n",
     "\n",
     "pd.options.mode.chained_assignment  = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,16 +48,16 @@
     "    XAMI_SPREADSHEET_FOLDER_PATH, \"cxr_meta.csv\"), index_col=0)\n",
     "\n",
     "cxr_chexpert_df = pd.read_csv(os.path.join(\n",
-    "    CXR_FOLDER_PATH, \"mimic-cxr-2.0.0-chexpert.csv.gz\"), compression='gzip', header=0, sep=',', quotechar='\"')\n",
+    "    CXR_JPG_FOLDER_PATH, \"mimic-cxr-2.0.0-chexpert.csv.gz\"), compression='gzip', header=0, sep=',', quotechar='\"')\n",
     "cxr_negbio_df = pd.read_csv(os.path.join(\n",
-    "    CXR_FOLDER_PATH, \"mimic-cxr-2.0.0-negbio.csv.gz\"), compression='gzip', header=0, sep=',', quotechar='\"')\n",
-    "cxr_split_df = pd.read_csv(os.path.join(CXR_FOLDER_PATH, \"mimic-cxr-2.0.0-split.csv.gz\"),\n",
+    "    CXR_JPG_FOLDER_PATH, \"mimic-cxr-2.0.0-negbio.csv.gz\"), compression='gzip', header=0, sep=',', quotechar='\"')\n",
+    "cxr_split_df = pd.read_csv(os.path.join(CXR_JPG_FOLDER_PATH, \"mimic-cxr-2.0.0-split.csv.gz\"),\n",
     "                           compression='gzip', header=0, sep=',', quotechar='\"')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -234,21 +247,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "cxr_chexpert_df = pd.read_csv(os.path.join(\n",
-    "    CXR_FOLDER_PATH, \"mimic-cxr-2.0.0-chexpert.csv.gz\"), compression='gzip', header=0, sep=',', quotechar='\"')\n",
+    "    CXR_JPG_FOLDER_PATH, \"mimic-cxr-2.0.0-chexpert.csv.gz\"), compression='gzip', header=0, sep=',', quotechar='\"')\n",
     "cxr_negbio_df = pd.read_csv(os.path.join(\n",
-    "    CXR_FOLDER_PATH, \"mimic-cxr-2.0.0-negbio.csv.gz\"), compression='gzip', header=0, sep=',', quotechar='\"')\n",
-    "cxr_split_df = pd.read_csv(os.path.join(CXR_FOLDER_PATH, \"mimic-cxr-2.0.0-split.csv.gz\"),\n",
+    "    CXR_JPG_FOLDER_PATH, \"mimic-cxr-2.0.0-negbio.csv.gz\"), compression='gzip', header=0, sep=',', quotechar='\"')\n",
+    "cxr_split_df = pd.read_csv(os.path.join(CXR_JPG_FOLDER_PATH, \"mimic-cxr-2.0.0-split.csv.gz\"),\n",
     "                           compression='gzip', header=0, sep=',', quotechar='\"')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -398,19 +411,19 @@
     "    for study_id in all_study_ids:\n",
     "        # CXR-jpg\n",
     "        source_path = os.path.join(\n",
-    "            CXR_FOLDER_PATH, \"files\", f\"p{str(subject_id)[:2]}\", f\"p{subject_id}\", f\"s{study_id}\")\n",
+    "            CXR_JPG_FOLDER_PATH, \"files\", f\"p{str(subject_id)[:2]}\", f\"p{subject_id}\", f\"s{study_id}\")\n",
     "        copytree(source_path, os.path.join(cxr_jpg_save_folder_path, f\"s{study_id}\"),\n",
     "                copy_function=copy, dirs_exist_ok=True)\n",
     "\n",
     "        # import the dicom\n",
-    "        source_path = os.path.join(\n",
-    "            CXR_DICOM_FOLDER_PATH, \"files\",  f\"p{str(subject_id)[:2]}\", f\"p{subject_id}\", f\"s{study_id}\")\n",
+    "        # source_path = os.path.join(\n",
+    "        #     CXR_DICOM_FOLDER_PATH, \"files\",  f\"p{str(subject_id)[:2]}\", f\"p{subject_id}\", f\"s{study_id}\")\n",
     "\n",
-    "        copytree(source_path, os.path.join(cxr_dicom_save_folder_path, f\"s{study_id}\"),\n",
-    "                copy_function=copy, dirs_exist_ok=True)\n",
+    "        # copytree(source_path, os.path.join(cxr_dicom_save_folder_path, f\"s{study_id}\"),\n",
+    "        #         copy_function=copy, dirs_exist_ok=True)\n",
     "\n",
     "        # import report text\n",
-    "        source_path = os.path.join(CXR_DICOM_FOLDER_PATH, \"files\", f\"p{str(subject_id)[:2]}\", f\"p{subject_id}\", f\"s{study_id}.txt\")\n",
+    "        source_path = os.path.join(CXR_REPORT_FOLDER_PATH, f\"p{str(subject_id)[:2]}\", f\"p{subject_id}\", f\"s{study_id}.txt\")\n",
     "        copy(source_path, cxr_dicom_save_folder_path)\n",
     "\n",
     "    ########### ALL CXR belong to the patient ###########\n",
@@ -438,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +479,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('pytorch')",
+   "display_name": "pytorch",
    "language": "python",
    "name": "python3"
   },
@@ -480,12 +493,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "52a48fdedee40b77eb251917c5aa239bf02f1ab8c93cc13fe7347f570eadc6b9"
+    "hash": "05ebdd47fe7a4051acc4227c2d648dd2aae7424f451cfb0e2d4bf70d17920b33"
    }
   }
  },
